--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -8,6 +9,270 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 .container {
   width: 100%;
+  background: #E5E5E5;
+}
+.container .top {
+  position: fixed;
+  width: 100%;
+}
+.container .top .nav-top {
+  background: #000;
+  height: 4rem;
+  width: 100%;
+}
+.container .top .nav-top .nav-top_ru {
+  height: 100%;
+  width: 120rem;
+  margin: 0 auto;
+}
+.container .top .nav-top .nav-top_ru div {
+  display: flex;
+  gap: 0.8rem;
+  text-align: center;
+  align-items: center;
+  height: 100%;
+}
+.container .top .nav-top .nav-top_ru div .ru {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 140%;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #FFFFFF;
+}
+.container .top .nav-top .nav-top_ru div .uzb {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 140%;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: rgba(255, 255, 255, 0.3);
+}
+.container .top nav {
+  width: 100%;
+  height: 7.2rem;
+  background: #FAFAFA;
+  box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12), 0px 14px 64px -4px rgba(24, 39, 75, 0.12);
+}
+.container .top nav .nav-items {
+  width: 120rem;
+  height: 7.2rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container .top nav .nav-items .nav-left {
+  height: 100%;
+  align-items: center;
+  text-align: center;
+  padding-top: 2rem;
+}
+.container .top nav .nav-items .nav-left a {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 23px;
+  line-height: 140%;
+  letter-spacing: 0.4px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #0D0D0D;
+}
+.container .top nav .nav-items .nav-center ul {
+  display: flex;
+  gap: 2.4rem;
+}
+.container .top nav .nav-items .nav-center ul li a {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.1px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+  transition: all 0.3s;
+}
+.container .top nav .nav-items .nav-center ul li a:hover {
+  text-decoration: underline;
+}
+.container .top nav .nav-items .nav-right {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  text-align: center;
+}
+.container .top nav .nav-items .nav-right .btn-link .sign {
+  background: #FFC000;
+  border-radius: 4px;
+  width: 7rem;
+  height: 3rem;
+  border: none;
+  transition: all 0.3s;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.44px;
+  color: #0D0D0D;
+}
+.container .top nav .nav-items .nav-right .btn-link .sign:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+.container .top nav .nav-items .nav-right .btn-link .sign-up {
+  background: #FFC000;
+  border-radius: 4px;
+  border: none;
+  width: 20rem;
+  height: 3rem;
+  margin-left: 1.5rem;
+  margin-right: 4.3rem;
+  transition: all 0.3s;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.44px;
+  color: #0D0D0D;
+  transition: all 0.3s;
+}
+.container .top nav .nav-items .nav-right .btn-link .sign-up:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+.container .top nav .nav-items .nav-right a .right-img {
+  cursor: pointer;
+}
+.container footer {
+  width: 100%;
+  background: #FFFFFF;
+  height: 32rem;
+}
+.container footer .footer-item {
+  height: 100%;
+  width: 120rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4.6rem;
+}
+.container footer .footer-item .footer-item_1 {
+  width: 25rem;
+}
+.container footer .footer-item .footer-item_1 h3 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_1 p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  letter-spacing: 0.25px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+  margin-bottom: 2rem;
+  margin-top: 1.6rem;
+}
+.container footer .footer-item .footer-item_2 h3 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_2 ul li {
+  margin-top: 1rem;
+}
+.container footer .footer-item .footer-item_2 ul li a {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  letter-spacing: 0.25px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_3 h3 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_3 ul li {
+  margin-top: 1rem;
+}
+.container footer .footer-item .footer-item_3 ul li a {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  letter-spacing: 0.25px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_4 h3 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
+}
+.container footer .footer-item .footer-item_4 ul li {
+  margin-top: 1rem;
+}
+.container footer .footer-item .footer-item_4 ul li a {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 160%;
+  letter-spacing: 0.25px;
+  font-feature-settings: "pnum" on, "lnum" on;
+  color: #000000;
 }/*# sourceMappingURL=style.css.map */
