--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap');
 
 *{
     padding: 0;
@@ -9,11 +9,292 @@ html{
     font-size: 62.5%;
 }
 body{
-
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
 }
 .container{
     width: 100%;
-    nav{
+    background: #E5E5E5;
+    // margin-top: 10rem;
+    .top{
+        position: fixed;
+        width: 100%;  
+        .nav-top{
+            background: #000;
+            height: 4rem;
+            width: 100%;
+            .nav-top_ru{
+                height: 100%;
+                width: 120rem;
+                margin: 0 auto;
+                div{
+                    display: flex;
+                    gap: .8rem;
+                    text-align: center;
+                    align-items: center;
+                    height: 100%;
+                    .ru{
+                        font-family: 'Montserrat';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 10px;
+                        line-height: 140%;
+                        letter-spacing: 1.5px;
+                        text-transform: uppercase;
+                        font-feature-settings: 'pnum' on, 'lnum' on;
+                        color: #FFFFFF;
+                    }
+                    .uzb{
+                        font-family: 'Montserrat';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 10px;
+                        line-height: 140%;
+                        letter-spacing: 1.5px;
+                        text-transform: uppercase;
+                        font-feature-settings: 'pnum' on, 'lnum' on;
+                        color: rgba(255, 255, 255, 0.3);
+                    }
+                }
+            }
+        }
+        nav{
+            // position:fixed;
+            width: 100%;
+            height: 7.2rem;
+            background: #FAFAFA;
+            box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12), 0px 14px 64px -4px rgba(24, 39, 75, 0.12);
+            .nav-items{
+                width: 120rem;
+                height: 7.2rem;
+                margin: 0 auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .nav-left{
+                    height: 100%;
+                    align-items: center;
+                    text-align: center;
+                    padding-top: 2rem;
+                    a{
+                        font-family: 'Poppins';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 23px;
+                        line-height: 140%;
+                        letter-spacing: 0.4px;
+                        font-feature-settings: 'pnum' on, 'lnum' on;
+                        color: #0D0D0D;  
+                    }
+                }
+                .nav-center{
+                    ul{
+                        display: flex;
+                        gap: 2.4rem;
+                        li{
+                            a{
+                                font-family: 'Montserrat';
+                                font-style: normal;
+                                font-weight: 500;
+                                font-size: 14px;
+                                line-height: 140%;
+                                letter-spacing: 0.1px;
+                                font-feature-settings: 'pnum' on, 'lnum' on;
+                                color: #000000;
+                                transition: all .3s;
+                                &:hover{
+                                    text-decoration: underline;
+                                }
+                            }
+                        }
+                    }
+                }
+                .nav-right{
+                    display: flex;
+                    height: 100%;
+                    align-items: center;
+                    text-align: center;
+                    .btn-link{
+                        .sign{
+                            background: #FFC000;
+                            border-radius: 4px;
+                            width: 7rem;
+                            height: 3rem;
+                            border: none;
+                            transition: all .3s;
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 16px;
+                            line-height: 140%;
+                            letter-spacing: 0.44px;
+                            color: #0D0D0D;
+                            &:hover{
+                                background: rgba(0, 0, 0, 0.05);
+                            }
+                        }
+                        .sign-up{
+                            background: #FFC000;
+                            border-radius: 4px;
+                            border: none;
+                            width: 20rem;
+                            height: 3rem;
+                            margin-left: 1.5rem;
+                            margin-right: 4.3rem;
+                            transition: all .3s;
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 16px;
+                            line-height: 140%;
+                            letter-spacing: 0.44px;
+                            // font-feature-settings: 'pnum' on, 'lnum' on;
+                            color: #0D0D0D;
+                            transition: all .3s;
+                            &:hover{
+                                background: rgba(0, 0, 0, 0.05);
+                            }
+                        }
+                    }
+                    a{
+                        .right-img{
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+    
+        }
+    }
+    footer{
+        width: 100%;
+        background: #FFFFFF;
+        height: 32rem;
+        .footer-item{
+            height: 100%;
+            width: 120rem;
+            margin:0 auto;
+            display: flex;
+            justify-content: space-between;
+            padding-top: 4.6rem;
 
+            .footer-item_1{
+                width: 25rem;
+                h3{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 140%;
+                    letter-spacing: 0.75px;
+                    text-transform: uppercase;
+                    font-feature-settings: 'pnum' on, 'lnum' on;
+                    color: #000000;
+                }
+                p{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 160%;
+                    letter-spacing: 0.25px;
+                    font-feature-settings: 'pnum' on, 'lnum' on;
+                    color: #000000;
+                    margin-bottom: 2rem;
+                    margin-top: 1.6rem;
+                }
+            }
+            .footer-item_2{
+                h3{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 140%;
+                    letter-spacing: 0.75px;
+                    text-transform: uppercase;
+                    font-feature-settings: 'pnum' on, 'lnum' on;
+                    color: #000000;
+                }
+                ul{
+                    li{
+                        margin-top: 1rem;
+                        a{
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 14px;
+                            line-height: 160%;
+                            letter-spacing: 0.25px;
+                            font-feature-settings: 'pnum' on, 'lnum' on;
+                            color: #000000;
+                        }
+                    }
+                }
+            }
+            .footer-item_3{
+                h3{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 140%;
+                    letter-spacing: 0.75px;
+                    text-transform: uppercase;
+                    font-feature-settings: 'pnum' on, 'lnum' on;
+                    color: #000000;
+                }
+                ul{
+                    li{
+                        margin-top: 1rem;
+                        a{
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 14px;
+                            line-height: 160%;
+                            letter-spacing: 0.25px;
+                            font-feature-settings: 'pnum' on, 'lnum' on;
+                            color: #000000;
+                        }
+                    }
+                }
+            }
+            .footer-item_4{
+                h3{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 140%;
+                    letter-spacing: 0.75px;
+                    text-transform: uppercase;
+                    font-feature-settings: 'pnum' on, 'lnum' on;
+                    color: #000000;
+                }
+                ul{
+                    li{
+                        margin-top: 1rem;
+                        a{
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 14px;
+                            line-height: 160%;
+                            letter-spacing: 0.25px;
+                            font-feature-settings: 'pnum' on, 'lnum' on;
+                            color: #000000;
+                            
+                        }
+                    }
+                }
+            }
+        }
     }
 }
