--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ li {
 .container .top {
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 .container .top .nav-top {
   background: #000;
@@ -164,6 +165,208 @@ li {
 }
 .container .top nav .nav-items .nav-right a .right-img {
   cursor: pointer;
+}
+.container header {
+  width: 100%;
+  height: 90rem;
+  background: linear-gradient(99.05deg, #E1AA00 0%, #FFC000 74.72%);
+  padding-top: 30rem;
+}
+.container header .header-main {
+  width: 100%;
+  height: 40rem;
+  background: #000000;
+}
+.container header .header-main .header-main_item {
+  width: 120rem;
+  margin: 0 auto;
+  height: 100%;
+  padding-right: 40%;
+}
+.container header .header-main .header-main_item h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 140%;
+  letter-spacing: 0.25px;
+  color: #FFFFFF;
+}
+.container header .header-main .header-main_item p {
+  margin-top: 1.6rem;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.1px;
+  color: #FFFFFF;
+}
+.container header .header-main .header-main_item ul {
+  margin-top: 2.4rem;
+}
+.container header .header-main .header-main_item ul li a {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  color: #FFC000;
+}
+.container header img {
+  position: absolute;
+  bottom: -15rem;
+  right: 10%;
+  z-index: 1;
+}
+.container .group-151 {
+  margin-top: 6.7rem;
+  width: 100%;
+  margin-bottom: 8rem;
+}
+.container .group-151 .gr-151-item {
+  width: 120rem;
+  margin: 0 auto;
+}
+.container .group-151 .gr-151-item h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.25px;
+  color: #000000;
+  margin-bottom: 2.4rem;
+}
+.container .group-151 .gr-151-item .gr-151_box {
+  width: 120rem;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.container .group-151 .gr-151-item .gr-151_box .box-151 {
+  width: 30rem;
+  height: 15rem;
+  background: #FFFFFF;
+  border-radius: 12px;
+  padding-top: 2.6rem;
+}
+.container .group-151 .gr-151-item .gr-151_box .box-151 p {
+  margin-top: 5rem;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.44px;
+  color: #000000;
+}
+.container .group-164 {
+  width: 100%;
+  margin-bottom: 15rem;
+  text-align: left;
+}
+.container .group-164 .gr-164-item {
+  width: 120rem;
+  height: 1px;
+  margin: 0 auto;
+  height: 56rem;
+}
+.container .group-164 .gr-164-item h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.25px;
+  color: #000000;
+  margin-bottom: 3.2rem;
+}
+.container .group-164 .gr-164-item .gr-164-boxes {
+  height: 56rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 {
+  width: 27rem;
+  height: 100%;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 98px rgba(0, 0, 0, 0.05);
+  border-radius: 12px;
+  overflow: hidden;
+  text-align: left;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 a button {
+  width: 90%;
+  height: 3.6rem;
+  background: #FFC000;
+  border: none;
+  border-radius: 6px;
+  margin-left: 1.3rem;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  color: #000000;
+  transition: all 0.3s;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 a button:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 img {
+  width: 100%;
+  margin-bottom: 0.7rem;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 .h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 140%;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: left;
+  padding-left: 1.3rem;
+  padding-right: 1rem;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 140%;
+  letter-spacing: 0.4px;
+  color: #000000;
+  padding-left: 1.3rem;
+  padding-right: 1rem;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 .price {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1.3rem;
+  padding-right: 1rem;
+  margin-top: 0.5rem;
+}
+.container .group-164 .gr-164-item .gr-164-boxes .box-164 .price .price-custom p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 140%;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  color: #000000;
 }
 .container footer {
   width: 100%;
