--- a/css/style.scss
+++ b/css/style.scss
@@ -21,10 +21,10 @@ li{
 .container{
     width: 100%;
     background: #E5E5E5;
-    // margin-top: 10rem;
     .top{
         position: fixed;
         width: 100%;  
+        z-index: 10;
         .nav-top{
             background: #000;
             height: 4rem;
@@ -65,6 +65,7 @@ li{
             }
         }
         nav{
+
             // position:fixed;
             width: 100%;
             height: 7.2rem;
@@ -170,6 +171,218 @@ li{
                 }
             }
     
+        }
+    }
+    header{
+        width: 100%;
+        height: 90rem;
+        background: linear-gradient(99.05deg, #E1AA00 0%, #FFC000 74.72%);
+        padding-top: 30rem;
+        .header-main{
+            width: 100%;
+            height: 40rem;
+            background: #000000;
+            .header-main_item{
+                width: 120rem;
+                margin: 0 auto;
+                height: 100%;
+                padding-right: 40%;
+                h1{
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 34px;
+                    line-height: 140%;
+                    letter-spacing: 0.25px;
+                    color: #FFFFFF;
+                }
+                p{
+                    margin-top: 1.6rem;
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 140%;
+                    letter-spacing: 0.1px;
+                    color: #FFFFFF;
+                }
+                ul{
+                    margin-top: 2.4rem;
+                    li{
+                        a{
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 600;
+                            font-size: 14px;
+                            line-height: 140%;
+                            letter-spacing: 0.75px;
+                            text-transform: uppercase;
+                            color: #FFC000;
+                        }
+                    }
+                }
+            }
+        }
+        img{
+            position: absolute;
+            bottom: -15rem;
+            right: 10%;
+            z-index: 1;
+            
+        }
+    }
+    .group-151{
+        margin-top: 6.7rem;
+        width: 100%;
+        margin-bottom: 8rem;
+        .gr-151-item{
+            width: 120rem;
+            margin: 0 auto;
+            h1{
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 34px;
+                line-height: 140%;
+                text-align: center;
+                letter-spacing: 0.25px;
+                color: #000000;
+                margin-bottom: 2.4rem;
+            }
+            .gr-151_box{
+                width: 120rem;
+                display: flex;
+                justify-content: space-between;
+                text-align: center;
+                .box-151{
+                    width: 30rem;
+                    height: 15rem;
+                    background: #FFFFFF;
+                    border-radius: 12px;
+                    padding-top: 2.6rem;
+                    p{
+                        margin-top: 5rem;
+                        font-family: 'Montserrat';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 140%;
+                        letter-spacing: 0.44px;
+                        color: #000000;
+                    }
+                }
+            }
+        }
+    }
+    .group-164{
+        width: 100%;
+        margin-bottom: 15rem;
+        text-align: left;
+        .gr-164-item{
+            width: 120rem;
+            height: 1px;
+            margin: 0 auto;
+            height: 56rem;
+            h1{
+                font-family: 'Montserrat';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 34px;
+                line-height: 140%;
+                text-align: center;
+                letter-spacing: 0.25px;
+                color: #000000;
+                margin-bottom: 3.2rem;
+            }
+            .gr-164-boxes{
+                height: 56rem;
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                text-align: left;
+                .box-164{
+                    width: 27rem;
+                    height: 100%;
+                    background: #FFFFFF;
+                    box-shadow: 0px 0px 98px rgba(0, 0, 0, 0.05);
+                    border-radius: 12px;
+                    overflow: hidden;
+                    text-align: left;
+
+                    a{
+                        button{
+                            width: 90%;
+                            height: 3.6rem;
+                            background: #FFC000;
+                            border: none;
+                            border-radius: 6px;
+                            margin-left: 1.3rem;
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 600;
+                            font-size: 14px;
+                            line-height: 140%;
+                            letter-spacing: 0.75px;
+                            text-transform: uppercase;
+                            color: #000000;
+                            transition: all .3s;
+                            
+                            &:hover{
+                                background: rgba(0, 0, 0, 0.05);
+                            }
+                        }
+                    }
+
+                    img{
+                        width: 100%;
+                        margin-bottom: .7rem;
+                    }
+                    .h1{
+                        font-family: 'Montserrat';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 14px;
+                        line-height: 140%;
+                        letter-spacing: 0.75px;
+                        text-transform: uppercase;
+                        color: #000000;
+                        text-align: left;
+                        padding-left: 1.3rem;
+                        padding-right: 1rem;
+                    }
+                    p{
+                        font-family: 'Montserrat';
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 140%;
+                        letter-spacing: 0.4px;
+                        color: #000000;
+                        padding-left: 1.3rem;
+                        padding-right: 1rem;
+                    }
+                    .price{
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        padding-left: 1.3rem;
+                        padding-right: 1rem;
+                        margin-top: 0.5rem;
+                        .price-custom{
+                            p{
+                                font-family: 'Montserrat';
+                                font-style: normal;
+                                font-weight: 700;
+                                font-size: 10px;
+                                line-height: 140%;
+                                letter-spacing: 1.5px;
+                                text-transform: uppercase;
+                                color: #000000;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
     footer{
