--- a/css/second.scss
+++ b/css/second.scss
@@ -324,6 +324,69 @@ li{
             }
         }
     }
+    .map-section{
+        margin-top: 15rem;
+        width: 100%;
+        height: 63rem;
+        margin-bottom: 6rem;
+        .map-item{
+            width: 120rem;
+            height: 100%;
+            margin:  0 auto;
+            border-radius: 6px;
+            overflow: hidden;
+            display: flex;
+            .map-left{
+                width: 50%;
+                height: 100%;
+                border-radius: 6px;
+                overflow: hidden;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .map-right{
+                width: 50%;
+                height: 100%;
+                padding-left: 10rem;
+                h1{
+                    font-family: 'Inter';
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 46px;
+                    line-height: 64px;
+                    color: #000000;
+                }
+                .address{
+                    width: 100%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin-top: 6.5rem;
+                    justify-content: space-between;
+                    ul{
+                        li{
+                            padding-top: 1rem;
+                            font-family: 'Inter';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 32px;
+                            color: #000000;
+                            p{
+                                font-family: 'Inter';
+                                font-style: normal;
+                                font-weight: 700;
+                                font-size: 18px;
+                                line-height: 32px;
+                                color: #000000;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
     footer{
         width: 100%;
         background: #FFFFFF;
